--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta content="" name="keywords"/>
     <meta content="" name="description"/>
     <link href="/favicon.ico" rel="icon"/>
-    <title>vue-next-admin</title>
+    <title>hyperf3商城</title>
 </head>
 <body>
 <div id="app"></div>
